v1.1.9, (2019-11-08)
--------------------
- Fix typo in spike_sorting units_similarity
- 

v1.1.8, (2019-10-28)
--------------------
- Fix typo is experiment creation
- Slight improvement to spike sorting UI
- Fix process status update when no units similarity violations found
- Critical Bug Fix:
    - Was applying voltage scaling twice during clustering, now fixed. 
    - Use tmp file when repacking. Resolves error when compressing and repacking to same filename



v1.1.7, (2019-10-10)
-------------------
- Fix imports for data_plot module

v1.1.6, (2019-10-09)
-------------------
- Consolidate plotting into single sub-package and minimize matplotlib imports
- Try to use TkAgg backend to resolve plt.show hang during spike_sorting

v1.1.5, (2019-10-07)
-------------------
- Included pyqt5 in requirements, necessary for plotting since I like the pyqt5 matplotlib backend
- Fixed blechpy.h5io.common_average_reference to handle uneven raw trace lengths (for a cutoff recording)
    - now truncates data to match shortest trace
    - Can mark channels as dead to exclude them and try and save good channels

v1.1.4, (2019-10-07) -- Actually saves dataset after clustering

v1.1.3, (2019-10-07)
-------------------
-Critical bug fix:
    - Clustering now actually works and reports problems
    - Clustering now excludes clustering of channels marked as dead

v1.1.2, (2019-10-07)
-------------------
- Critical bug fix:
    - blechpy.dio.h5io now properly importing referenced traces
    - blechpy.analysis.blech_clust_process now properly choosing raw data only
      if referenced data is not available

v1.1.1, (2019-10-06)
-------------------
- Fixed critical bugs in new dataset creation:
    - Indentation error causing CAR groups to not be assigned properly
    - info.rhd corruption checking

- Can run from setup through clustering with only a single prompt if desired 